# Pytest

./: requirements.txt
python_automation_testing_with_pytest/: README.md  pyproject.toml  pytest.ini
python_automation_testing_with_pytest/pytest_topics/: 01-fisrt_prog.py  check_argtest.py  conftest.py  test_data_provider.py  test_getconfigdata.py  test_markers.py  test_module01.py  test_module02.py  test_parametrize.py  test_skiptest.py  test_xfail.py
python_automation_testing_with_pytest/pytest_topics/bddpytest/: test_bdd01.py  test_bddfixtures.py  test_bddoutline.py  test_bddparameterize.py
python_automation_testing_with_pytest/pytest_topics/bddpytest/myfeatures/: first101.feature  fixtures.feature  parameterize.feature  scenariooutline.feature
python_automation_testing_with_pytest/pytest_topics/config/: data.csv
python_automation_testing_with_pytest/pytest_topics/py_assertions/: test_module01.py  test_module02.py
python_automation_testing_with_pytest/pytest_topics/py_fixtures/: conftest.py  test_fixtures01.py  test_fixtures02.py  test_fixtures03.py  test_fixtures04.py  test_fixtures05.py
python_automation_testing_with_pytest/pytest_topics/utils/: ConfigFileParser.py  myconfigparser.py  util.py
python_mocks/: basic.py  main.py  pro.py  tests.py
